# dana_poetry

./: README.md  genindex.html  index.html  modules.html  my_project.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  tests.html
.github/workflows/: main.yml
_sources/: index.rst.txt
docs1/: conf.py  index.rst
docs1/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  my_project.doctree  tests.doctree
docs1/_build/html/: genindex.html  modules.html  my_project.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs2/: conf.py  my_project.rst  tests.rst
docs2/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  my_project.doctree  tests.doctree
docs2/_build/html/: .buildinfo  genindex.html  index.html  modules.html  my_project.html  objects.inv  py-modindex.html  searchindex.js  tests.html
docs2/_build/html/_sources/: index.rst.txt  modules.rst.txt
docs3/: conf.py
docs3/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  my_project.doctree  tests.doctree
docs3/_build/html/: .buildinfo  genindex.html  index.html  modules.html  my_project.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html
my_project/: fizz_buzz.py  pass6.py
tests/: fizz_buzz_test.py  pass6_test.py  test_fizz_buzz.py  test_pass6  test_pass6.py
