[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["dana-wq <144427545+dana-wq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.3.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
